<modify>: several modifications for table for class id problems
