# model/collectionModel.go
@@ -16,9 +16,9 @@ type CourseInfoInTableCollection struct {
 
 // 选课清单内的课堂（教学班）信息
 type ClassInfoInCollections struct {
-	ClassId         string                        `json:"class_id"` // 课堂hash id
+	ClassId         uint64                        `json:"class_id"` // 教学班编号
 	ClassName       string                        `json:"class_name"`
-	TeachingClassId uint64                        `json:"teaching_class_id"` // 教学班编号
+	//TeachingClassId uint64                        `json:"teaching_class_id"` // 教学班编号
 	Teacher         string                        `json:"teacher"`
 	Times           *[]ClassTimeInfoInCollections `json:"times"`
 	Places          *[]string                     `json:"places"`
